# notification_system

./: .dockerignore  .env  .env.example  .gitignore  GEMINI.md  README.md  debug_config.py  makefile  pyproject.toml
.claude/: ACTION_PLAN.md  CLAUDE.md  INTERVIEW_QUESTIONS.md  ROADMAP.md
app/: main.py
app/api/: schemas.py
app/api/endpoints/: auth.py  notficiation.py  notification.py
app/api/schemas/: __init__.py  common.py  notification.py
app/core/: auth.py  cache.py  config.py  logging_config.py  rate_limit_dependency.py  rate_limiter.py  redis_client.py
app/db/nosql/: models.py
app/db/sql/: connection.py  models.py  repositories.py
app/db/sql/migration/: alembic.ini  (+1 more)
app/services/: channel_services.py  notification_service.py  rabbitmq_publisher.py  recipient_resolver.py  user_service.py
app/tests/: conftest.py  test_database.py  test_notification_service.py
app/tests/api/: test_auth.py  test_notification.py
app/tests/integration/: test_notification_flow.py
app/tests/services/: test_channel_services.py  test_notification_service.py  test_recipient_resolver.py
app/tests/utils/: test_validators.py
app/tests/worker/: test_tasks.py  test_worker_integration.py
app/utils/: circuit_breakers.py  exceptions.py  interfaces.py  retries.py  validators.py
app/worker/: consumer.py  tasks.py
docker/: Dockerfile.api  docker-compose.yml  init-db.sql
migration/: alembic.ini  migrate.py
migration/alembic/: env.py
migration/alembic/versions/: 2c0037967262_update_notification_and_recipient_ids_.py  66ee4d76aa77_initial_notification_tables.py  (+1 more)
(+1 files in other folders)
