[project]
name = "notification-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "celery>=5.5.2",
    "fastapi[all,standard]>=0.115.12",
    "jedi-language-server>=0.45.1",
    "motor>=3.7.1",
    "pia>=0.2.0",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
]
